--- a/site/src/pages/Login/LoginPage.css
+++ b/site/src/pages/Login/LoginPage.css
@@ -1,249 +1,147 @@
-@font-face { font-family: 'TmonMonsori'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff'); font-weight: normal; font-style: normal; }
-
-body{
-    font-family: 'TmonMonsori';
-    position: absolute;
-    top: 0; left: 0;
-    right: 0; bottom: 0;
-    width: 100%; height: 100%;
-    /*background-color: #ce86f7;*/
-    font-size: 60px;
-    color: #6C58CE;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+input, button, select, textarea {
+    font-family: 'LocalFontName', "Broken Console";
+}
+
+
+html, body {
+    font-family: 'LocalFontName', "Broken Console";
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background-color: #a82cf2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+}
+
 .box {
-    display: flex;
+    position: absolute;
+    top: 30px;
     flex-direction: column;
-    justify-content: flex-start; /* Align items to the top */
-    align-items: center; /* Center items horizontally */
-    text-align: center; /* Center text specifically, for when flex properties don't apply directly to inline elements or text */
-    height: 100vh;
+    align-items: center;
+    text-align: center;
     width: 100vw;
-    margin: 0 auto; /* Center the .box itself if needed */
-
-}
-.box span{
-    position: relative;
-    top: 20px;
-    display: inline-block;
-    animation: bounce 0.3s ease infinite alternate;
-    text-shadow: 0 1px #ccc, 0 2px #ccc, 0 3px #ccc, 0 4px #ccc, 0 5px #ccc, 0 6px 0 transparent, 0 7px transparent, 0 8px transparent, 0 9px transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
-}
-@keyframes bounce{
-    100%{
-        top: -20px;
-        text-shadow: 0 1px #ccc,
-        0 2px #ccc,
-        0 3px #ccc,
-        0 4px #ccc,
-        0 5px #ccc,
-        0 6px #ccc,
-        0 7px #ccc,
-        0 8px #ccc,
-        0 9px #ccc,
-        0 50px 25px rgba(0, 0, 0, 0.2);
-    }
-}
-.box span:nth-child(2){
-    animation-delay:0.1s;
-}
-.box span:nth-child(3){
-    animation-delay:0.2s;
-}
-.box span:nth-child(4){
-    animation-delay:0.3s;
-}
-.box span:nth-child(5){
-    animation-delay:0.4s;
-}
-.container {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 50px;
-    /*background: #ce86f7;*/
-    padding-bottom: 30px;
+    height: 100vh;
+    margin: 0 auto;
 }
 
-.header{
+.container, .header, .inputs, .input {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 9px;
-    width: 100%;
-    margin-top: 30px;
-
-}
-.header .text {
-    font-size: 24px; /* Larger font size for the header text */
-    font-weight: bold; /* Makes the header text bold */
-    color: #333; /* Dark color for the text */
+    color: #FFFFFF;
 }
 
-.header .underline {
-    height: 2px; /* Sets the height of the underline */
-    width: 60px; /* Sets the width of the underline */
-    /*background-color: #e600e2; */
-    border-radius: 9px;
+.inputs {
+    margin-top: 170px;
 }
 
-.inputs{
-    margin-top: 55px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-
+input::placeholder {
+    color: #FFFFFF;
+    opacity: 1;
 }
+
 
 .input {
-    display: flex; /* Aligns the icon and input field horizontally */
-    align-items: center; /* Centers items vertically within the input div */
-     margin: auto;
-    width: 480px;
-    height: 80px;
+    justify-content: center;
+    padding: 0 10px;
+    color: #FFFFFF;
     background: transparent;
+    display: flex;
+    align-items: center;
+    width: 350px;
+    height: 80px;
     border-radius: 10px;
-    /* Adds spacing between input fields */
-    border-color: black;
-
+    margin: 10px 0;
+    z-index: 2;
 }
 
-.input img {
-   margin: 0px 30px;
-
-}
 
 .input input {
     height: 50px;
-    width: 400px; /* Makes the input field take up the remaining space */
-    border-radius: 10px;
-    outline: none;
-    color: black;
+    width: 100%;
+    border-radius: 30px;
+    color: #ffffff;
     font-size: 19px;
-    border-color: black;
-    background: transparent;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    padding: 0 20px;
+    box-shadow: 0 3px 6px #a82cf2;
+    /*opacity: 0.5;*/
+    outline: none;
+    border: none;
 }
 
-.inputs .input input::placeholder {
-    color: black; /* Set placeholder text color to black */
-    font-family: Arial, sans-serif; /* Change font-family to Arial */
-}
 
+
+.input input:focus{
+    outline: none;
+
+}
 .submit-container {
-    display: flex; /* Aligns the submit buttons horizontally */
-    justify-content: space-around; /* Distributes space evenly around the submit buttons */
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 40px;
+    z-index: 2;
 }
+
+
 
 .submit {
-    cursor: pointer; /* Changes the cursor to a pointer on hover */
-    padding: 10px 20px; /* Adds padding inside the submit buttons */
-    /*background-color: #e600e2; */
-    color: black; /* Text color of the submit buttons */
-    border-radius: 4px; /* Rounds the corners of the submit buttons */
-    text-align: center; /* Centers the text inside the submit buttons */
-    transition: background-color 0.3s; /* Smooth background color change on hover */
-    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px 20px;
+    color: white;
+    border-radius: 30px;
+    font-size: 20px;
+    transition: background-color 0.3s;
+    background-color: rgba(168, 44, 242, 0.57);
+    border: none;
+    box-shadow: 0 3px 6px #a82cf2;
 }
 
 .submit:hover {
-    background-color: #e600e2; /* Darkens the submit button background on hover */
+    background-color: rgba(0, 0, 0, 0.25);
+    outline: 2px solid #A82CF2;
+
 }
 
 
-.bg {
-    background: url(galaxy.png) no-repeat center center fixed;
+.header .text, .header .underline {
+    text-align: center;
+}
+
+.header .underline {
+    height: 2px;
+    width: 60px;
+    border-radius: 9px;
+    background-color: #e600e2;
+}
+
+
+.center-image {
+    z-index: 1;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100vw - 80px);
+    height: calc(100vh - 80px);
+    background-image: url(brainbetty.jpg);
     background-size: cover;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -3;
-    /* Adding a filter to simulate a grainy texture */
-    filter: contrast(110%) brightness(90%);
+    background-position: center;
+    border-radius: 40px;
+    box-shadow: inset 0 0 20px #000000;
 }
-.bg:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    /* Adjusting the gradient for a more saturated retro color scheme */
-    background: linear-gradient(135deg, rgba(98, 0, 234, 0.8), rgba(128, 43, 226, 0.8), rgba(255, 105, 180, 0.8), rgba(255, 20, 147, 0.6));
-    position: fixed;
-    z-index: -2; /* Adjusted z-index to be above the background but below content */
-    top: 0;
-    left: 0;
-    opacity: 1;
-    /* Adding a slight blur to enhance the retro vibe */
-    backdrop-filter: blur(2px);
-}
-@keyframes sf-fly-by-1 {
-    from {
-        transform: translateZ(-600px);
-        opacity: 0.5;
-    }
-    to {
-        transform: translateZ(0);
-        opacity: 0.5;
-    }
-}
-@keyframes sf-fly-by-2 {
-    from {
-        transform: translateZ(-1200px);
-        opacity: 0.5;
-    }
-    to {
-        transform: translateZ(-600px);
-        opacity: 0.5;
-    }
-}
-@keyframes sf-fly-by-3 {
-    from {
-        transform: translateZ(-1800px);
-        opacity: 0.5;
-    }
-    to {
-        transform: translateZ(-1200px);
-        opacity: 0.5;
-    }
-}
-.star-field {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    perspective: 600px;
-    -webkit-perspective: 600px;
-    z-index: -1;
-
-}
-.star-field .layer {
-    box-shadow: -411px -476px #cccccc, 777px -407px #d4d4d4, -387px -477px #fcfcfc, -91px -235px #d4d4d4, 491px -460px #f7f7f7, 892px -128px #f7f7f7, 758px -277px #ededed, 596px 378px #cccccc, 647px 423px whitesmoke, 183px 389px #c7c7c7,
-    524px -237px #f0f0f0, 679px -535px #e3e3e3, 158px 399px #ededed, 157px 249px #ededed, 81px -450px #ebebeb, 719px -360px #c2c2c2, -499px 473px #e8e8e8, -158px -349px #d4d4d4, 870px -134px #cfcfcf, 446px 404px #c2c2c2,
-    440px 490px #d4d4d4, 414px 507px #e6e6e6, -12px 246px #fcfcfc, -384px 369px #e3e3e3, 641px -413px #fcfcfc, 822px 516px #dbdbdb, 449px 132px #c2c2c2, 727px 146px #f7f7f7, -315px -488px #e6e6e6, 952px -70px #e3e3e3,
-    -869px -29px #dbdbdb, 502px 80px #dedede, 764px 342px #e0e0e0, -150px -380px #dbdbdb, 654px -426px #e3e3e3, -325px -263px #c2c2c2, 755px -447px #c7c7c7, 729px -177px #c2c2c2, -682px -391px #e6e6e6, 554px -176px #ededed,
-    -85px -428px #d9d9d9, 714px 55px #e8e8e8, 359px -285px #cfcfcf, -362px -508px #dedede, 468px -265px #fcfcfc, 74px -500px #c7c7c7, -514px 383px #dbdbdb, 730px -92px #cfcfcf, -112px 287px #c9c9c9, -853px 79px #d6d6d6,
-    828px 475px #d6d6d6, -681px 13px #fafafa, -176px 209px #f0f0f0, 758px 457px #fafafa, -383px -454px #ededed, 813px 179px #d1d1d1, 608px 98px whitesmoke, -860px -65px #c4c4c4, -572px 272px #f7f7f7, 459px 533px #fcfcfc,
-    624px -481px #e6e6e6, 790px 477px #dedede, 731px -403px #ededed, 70px -534px #cccccc, -23px 510px #cfcfcf, -652px -237px whitesmoke, -690px 367px #d1d1d1, 810px 536px #d1d1d1, 774px 293px #c9c9c9, -362px 97px #c2c2c2,
-    563px 47px #dedede, 313px 475px #e0e0e0, 839px -491px #e3e3e3, -217px 377px #d4d4d4, -581px 239px #c2c2c2, -857px 72px #cccccc, -23px 340px #dedede, -837px 246px white, 170px -502px #cfcfcf, 822px -443px #e0e0e0, 795px 497px #e0e0e0,
-    -814px -337px #cfcfcf, 206px -339px #f2f2f2, -779px 108px #e6e6e6, 808px 2px #d4d4d4, 665px 41px #d4d4d4, -564px 64px #cccccc, -380px 74px #cfcfcf, -369px -60px #f7f7f7, 47px -495px #e3e3e3, -383px 368px #f7f7f7, 419px 288px #d1d1d1,
-    -598px -50px #c2c2c2, -833px 187px #c4c4c4, 378px 325px whitesmoke, -703px 375px #d6d6d6, 392px 520px #d9d9d9, -492px -60px #c4c4c4, 759px 288px #ebebeb, 98px -412px #c4c4c4, -911px -277px #c9c9c9;
-    transform-style: preserve-3d;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 4px;
-    width: 4px;
-    border-radius: 2px;
-    filter: blur(0.5px);
-}
-.star-field .layer:nth-child(1) {
-    animation: sf-fly-by-1 5s linear infinite;
-}
-.star-field .layer:nth-child(2) {
-    animation: sf-fly-by-2 5s linear infinite;
-}
-.star-field .layer:nth-child(3) {
-    animation: sf-fly-by-3 5s linear infinite;
-}
-
-
